--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "generic-names": "^2.0.1",
+    "lodash": "^4.17.11",
     "postcss": "^7.0.14",
     "postcss-modules-local-by-default": "^2.0.5",
-    "postcss-modules-scope": "^2.0.1",
-    "lodash": "^4.17.11",
+    "postcss-modules-scope": "^2.0.1"
   },
   "bugs": {
     "url": "https://github.com/jian263994241/less-plugin-css-modules/issues"
